JS, CSS: fetch CSS variable from JS.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   Word Search
+  <section id="square-frame">
+    
+  </section>
 </body>
 <script src="js/main.js"></script>
 </html>
