JS, CSS: edit JS 'generateSqs()', add CSS grid

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Word Search</title>
 </head>
 <body>
-  Word Search
+  <h3>Word Search</h3>
   <section id="square-frame">
-    
+
   </section>
 </body>
 <script src="js/main.js"></script>
