Add maxattempts in loop, and list words in HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <section id="square-frame">
 
   </section>
+  <section id="section-word-list"></section>
 </body>
 <script src="js/main.js"></script>
 <script src="js/words.js"></script>
